add log mongo db
