# internal/entity/user/user.go
@@ -10,15 +10,13 @@ type AuthRequest struct {
 type User struct {
 	Id              int       `json:"id" swaggerignore:"true"`
 	Code            string    `json:"code" swaggerignore:"true"`
-	Name            string    `json:"name" validate:"required"`
-	Email           string    `json:"email" validate:"required,email"`
-	Password        string    `json:"password" validate:"required"`
+	Name            string    `json:"name" binding:"required"`
+	Email           string    `json:"email" binding:"required,email"`
+	Password        string    `json:"password" binding:"required,min=6"`
 	EmailIsVerified bool      `json:"emailIsVerified" swaggerignore:"true"`
-	Username        string    `json:"username" validate:"required"`
-	PhoneNumber     int64     `json:"phoneNumber"`
+	Username        string    `json:"username" binding:"required"`
+	Phone           string    `json:"phone"`
 	IsActive        bool      `json:"isActive" swaggerignore:"true"`
-	Avatar          string    `json:"avatar"`
-	ApiToken        string    `json:"apiToken" swaggerignore:"true"`
 	CreatedAt       time.Time `json:"created_at" swaggerignore:"true"`
 	UpdatedAt       time.Time `json:"updated_at" swaggerignore:"true"`
 	DeletedAt       time.Time `json:"deleted_at" swaggerignore:"true"`
@@ -27,14 +25,12 @@ type User struct {
 type UserAccess struct {
 	Id              int       `json:"id"`
 	Code            string    `json:"code"`
-	Name            string    `json:"name" validate:"required"`
-	Email           string    `json:"email" validate:"required,email"`
+	Name            string    `json:"name" binding:"required"`
+	Email           string    `json:"email" binding:"required,email"`
 	EmailIsVerified bool      `json:"emailIsVerified"`
-	Username        string    `json:"username" validate:"required"`
-	PhoneNumber     int64     `json:"phoneNumber"`
+	Username        string    `json:"username" binding:"required"`
+	Phone           string    `json:"phone"`
 	IsActive        bool      `json:"isActive"`
-	Avatar          string    `json:"avatar"`
-	ApiToken        string    `json:"apiToken"`
 	CreatedAt       time.Time `json:"created_at"`
 	UpdatedAt       time.Time `json:"updated_at"`
 	AccessToken     string    `json:"accessToken"`
